<resources>
    <string name="app_name">Puretone Info</string>
    <string name="dis1">Hearing Protection</string>
    <string name="dis2">In Ear Monitors</string>
    <string name="dis3">Hearing Aids</string>
    <string name="dis4">Audiology services</string>
    <string name="dis5">Accessories</string>
    <string name="dis6">Tinnitus Relief</string>
    <string name="dis7">Communications</string>
    <string name="dis8">Radio Headsets</string>
    <string name="webaddress"><www class="puretone net">www.puretone.net</www></string>
    <string name="info">Puretone Ltd are British manufacturers of quality hearing protection plugs, hearing aids, tinnitus management systems, in-ear monitors for musicians, earmoulds, swimplugs, and covert equipment for surveillance purposes. Suppliers of audiological, ERA equipment and accessories. Established since 1976.</string>
    <string name="phoneNumber">+44 1634 719427</string>
    <string name="phone">Phone: </string>
    <string name="call">Call</string>
    <string name="email">E-Mail</string>
    <string name="web">Web</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="location">Location</string>
    <string name="contentdesc1">Logo</string>
    <string name="contentdesc2">Audiometer</string>
    <string name="contentdesc3">Call icon</string>
    <string name="contentdesc4">Email icon</string>
    <string name="contentdesc5">Web icon</string>
    <string name="contentdesc6">Facebook icon</string>
    <string name="contentdesc7">Twitter icon</string>
    <string name="contentdesc8">Location icon</string>





</resources>
