<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.puretoneinfo.MainActivity">

    <LinearLayout
        android:id="@+id/linlay1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:background="@color/colorPrimaryDark" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:contentDescription="@string/contentdesc1"
            android:scaleType="centerInside"
            android:src="@drawable/puretone" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/contentdesc2"

                    android:paddingTop="@dimen/layout_margin1"
                    android:src="@drawable/audiology" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/layout_top"
                    android:layout_marginTop="@dimen/icon_margin"
                    android:fontFamily="@font/fjalla"
                    android:gravity="center"
                    android:paddingBottom="@dimen/info_margin_bottom"
                    android:text="@string/info"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold" />
                <TableLayout
                    android:layout_marginStart="@dimen/tablet_margin"
                    android:layout_marginLeft="@dimen/tablet_margin"
                    android:layout_marginRight="@dimen/tablet_margin"
                    android:layout_marginEnd="@dimen/tablet_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="callUs"
                        android:orientation="vertical"
                        android:layout_weight="1">

                        <ImageView
                            android:layout_width="@dimen/icon_size"
                            android:layout_height="@dimen/icon_size"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/layout_top"
                            android:contentDescription="@string/contentdesc3"
                            android:src="@drawable/call" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/layout_top"
                            android:layout_marginTop="@dimen/icon_margin"
                            android:fontFamily="@font/fjalla"
                            android:gravity="center"
                            android:text="@string/call"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                            android:textColor="@color/colorPrimaryDark"
                            android:textStyle="bold" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="emailUs"
                        android:orientation="vertical"
                        android:layout_weight="1">

                        <ImageView
                            android:layout_width="@dimen/icon_size"
                            android:layout_height="@dimen/icon_size"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/layout_top"
                            android:contentDescription="@string/contentdesc4"
                            android:src="@drawable/email" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/layout_top"
                            android:layout_marginTop="@dimen/icon_margin"
                            android:fontFamily="@font/fjalla"
                            android:gravity="center"
                            android:text="@string/email"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                            android:textColor="@color/colorPrimaryDark"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="goToWeb"
                        android:orientation="vertical"
                        android:layout_weight="1">

                        <ImageView
                            android:layout_width="@dimen/icon_size"
                            android:layout_height="@dimen/icon_size"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/layout_top"
                            android:contentDescription="@string/contentdesc5"
                            android:src="@drawable/www" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/layout_top"
                            android:layout_marginTop="@dimen/icon_margin"
                            android:fontFamily="@font/fjalla"
                            android:gravity="center"
                            android:text="@string/web"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                            android:textColor="@color/colorPrimaryDark"
                            android:textStyle="bold" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dis_margin"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="facebook"
                        android:orientation="vertical"
                        android:layout_weight="1">

                        <ImageView
                            android:layout_width="@dimen/icon_size"
                            android:layout_height="@dimen/icon_size"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/layout_top"
                            android:contentDescription="@string/contentdesc6"
                            android:src="@drawable/facebook" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/layout_top"
                            android:layout_marginTop="@dimen/icon_margin"
                            android:fontFamily="@font/fjalla"
                            android:gravity="center"
                            android:text="@string/facebook"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                            android:textColor="@color/colorPrimaryDark"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="twitter"
                        android:orientation="vertical"
                        android:layout_weight="1">

                        <ImageView
                            android:layout_width="@dimen/icon_size"
                            android:layout_height="@dimen/icon_size"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/layout_top"
                            android:contentDescription="@string/contentdesc7"
                            android:src="@drawable/twitter" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/layout_top"
                            android:layout_marginTop="@dimen/icon_margin"
                            android:fontFamily="@font/fjalla"
                            android:gravity="center"
                            android:text="@string/twitter"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                            android:textColor="@color/colorPrimaryDark"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="geo"
                        android:orientation="vertical"
                        android:layout_weight="1">

                        <ImageView
                            android:layout_width="@dimen/icon_size"
                            android:layout_height="@dimen/icon_size"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/layout_top"
                            android:contentDescription="@string/contentdesc8"
                            android:src="@drawable/geo" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/layout_top"
                            android:layout_marginTop="@dimen/icon_margin"
                            android:fontFamily="@font/fjalla"
                            android:gravity="center"
                            android:text="@string/location"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                            android:textColor="@color/colorPrimaryDark"
                            android:textStyle="bold" />

                    </LinearLayout>
                </LinearLayout>
                </TableLayout>

            </TableLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>

